tests/baselines/reference/publicMemberImplementedAsPrivateInDerivedClass.errors.txt
publicMemberImplementedAsPrivateInDerivedClass.ts(4,7): error TS2420: Class 'Foo' incorrectly implements interface 'Qux'.
  Property 'Bar' is private in type 'Foo' but not in type 'Qux'.
publicMemberImplementedAsPrivateInDerivedClass.ts(5,10): error TS2564: Property 'Bar' has no initializer and is not definitely assigned in the constructor.


==== publicMemberImplementedAsPrivateInDerivedClass.ts (2 errors) ====
    interface Qux {
     Bar: number;
    }
    class Foo implements Qux {
          ~~~
!!! error TS2420: Class 'Foo' incorrectly implements interface 'Qux'.
!!! error TS2420:   Property 'Bar' is private in type 'Foo' but not in type 'Qux'.
     private Bar: number;
             ~~~
!!! error TS2564: Property 'Bar' has no initializer and is not definitely assigned in the constructor.
    }
    